--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <version>21.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0.2</version>
+        </dependency>
 
         <!--<dependency>-->
         <!--<groupId>org.mybatis</groupId>-->
