--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,8 +2,16 @@ server.port=8081
 
 
 
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=true
+#spring.datasource.username=root
+#spring.datasource.password=123456
+
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf8&useSSL=true
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/fastsql?characterEncoding=utf8&useSSL=true
+spring.datasource.username=pig
 spring.datasource.password=123456
 
+
+logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=trace
