--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,11 @@
             <version>4.3.12.RELEASE</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>22.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.google.guava</groupId>-->
+            <!--<artifactId>guava</artifactId>-->
+            <!--<version>22.0</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
