--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.fastsql</groupId>
+    <groupId>org.fastsql</groupId>
     <artifactId>fastsql</artifactId>
     <version>0.9.0</version>
 
@@ -14,12 +14,6 @@
             <artifactId>spring-jdbc</artifactId>
             <version>4.3.12.RELEASE</version>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>com.google.guava</groupId>-->
-            <!--<artifactId>guava</artifactId>-->
-            <!--<version>22.0</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
