--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <!--<version>1.2.3</version>-->
         <!--</dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.6-jre</version>
+        </dependency>
 
 
 
