--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>top.fastsql</groupId>
     <artifactId>fastsql</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
 
     <name>fastsql</name>
     <description>FastSQL is a lightweight database operate library.</description>
@@ -132,7 +132,7 @@
         <repository>
             <id>nexus</id>
             <name>Nexus Release Repository</name>
-            <url>http://zdht-cd.imwork.net:8686/repository/maven-releases/</url>
+            <url>http://192.168.0.223:8081/repository/maven-releases/</url>
         </repository>
     </distributionManagement>
 
