--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>top.fastsql</groupId>
     <artifactId>fastsql</artifactId>
-    <version>1.0.4</version>
+    <version>1.1.0</version>
 
     <name>fastsql</name>
     <description>FastSQL is a lightweight database operate library.</description>
@@ -117,24 +117,24 @@
     </scm>
 
 
-    <!--<distributionManagement>-->
-    <!--<snapshotRepository>-->
-    <!--<id>oss</id>-->
-    <!--<url>https://oss.sonatype.org/content/repositories/snapshots/</url>-->
-    <!--</snapshotRepository>-->
-    <!--<repository>-->
-    <!--<id>oss</id>-->
-    <!--<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
-    <!--</repository>-->
-    <!--</distributionManagement>-->
-
     <distributionManagement>
+        <snapshotRepository>
+            <id>oss</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
         <repository>
-            <id>nexus</id>
-            <name>Nexus Release Repository</name>
-            <url>http://192.168.0.223:8081/repository/maven-releases/</url>
+            <id>oss</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
+
+    <!--<distributionManagement>-->
+    <!--<repository>-->
+    <!--<id>nexus</id>-->
+    <!--<name>Nexus Release Repository</name>-->
+    <!--<url>http://192.168.0.223:8081/repository/maven-releases/</url>-->
+    <!--</repository>-->
+    <!--</distributionManagement>-->
 
 
     <build>
