--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,15 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>2.7.8</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <licenses>
