--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>top.fastsql</groupId>
     <artifactId>fastsql</artifactId>
-    <version>1.2.0</version>
+    <version>1.2.1</version>
 
     <name>fastsql</name>
     <description>FastSQL is a lightweight database operate library.</description>
@@ -73,6 +73,11 @@
 
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
 
+        <!--<dependency>-->
+            <!--<groupId>org.fastsql</groupId>-->
+            <!--<artifactId>fastsql</artifactId>-->
+            <!--<version>1.2.1</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>junit</groupId>
